--- a/dancing-studio/Views/Shared/_Layout.cshtml
+++ b/dancing-studio/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Преподаватели", "Index", "Teachers")</li>
                 </ul>
             </div>
         </div>
