--- a/dancing-studio/Views/Shared/_Layout.cshtml
+++ b/dancing-studio/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Преподаватели", "Index", "Teachers")</li>
+                    <li>@Html.ActionLink("Ученики", "Index", "Students")</li>
                 </ul>
             </div>
         </div>
