--- a/dancing-studio/Views/Students/Index.cshtml
+++ b/dancing-studio/Views/Students/Index.cshtml
@@ -40,7 +40,7 @@
         <td>
             @foreach (var group in item.Groups)
             {
-                 @Html.DisplayFor(modelItem => group.Mame)
+                 @Html.DisplayFor(modelItem => group.Name) <br/>
             }
         </td>
         <td>
