--- a/dancing-studio/Views/Teachers/Create.cshtml
+++ b/dancing-studio/Views/Teachers/Create.cshtml
@@ -39,6 +39,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Groups, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @foreach (dancing_studio.DAL.Group c in ViewBag.Groups)
+                {
+                    <input type="checkbox" name="selectedGroups" value="@c.Id" /> @(c.Name + " - " + c.Teacher.Name)<br />
+                }
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Создать" class="btn btn-default" />
             </div>
