--- a/dancing-studio/Views/Students/Delete.cshtml
+++ b/dancing-studio/Views/Students/Delete.cshtml
@@ -34,6 +34,19 @@
             @Html.DisplayFor(model => model.Birthday)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Groups)
+        </dt>
+        <dd>
+            @foreach (dancing_studio.DAL.Group group in ViewBag.Groups)
+            {
+                if (Model.Groups.Contains(group))
+                {
+                    @(group.Name + " - " + group.Teacher.Name) <br />
+                }
+            }
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
