--- a/dancing-studio/Views/Students/Create.cshtml
+++ b/dancing-studio/Views/Students/Create.cshtml
@@ -37,7 +37,6 @@
                 @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Groups, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -47,6 +46,8 @@
                 }
             </div>
         </div>
+
+        @Html.HiddenFor(model => model.Groups)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
