--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -3,27 +3,26 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Система управления центром обучения и досуга</h1>
+    <p class="lead">Добро пожаловать на главную страницу!</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Журнал</h2>
         <p>
-            дописать
+           Здесь вы можете заполнить и просмотреть журнал посещения
         </p>
         <p><a class="btn btn-default" href=@Url.Action("Index", "Lessons")>Перейти &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2> </h2>
+        <p> </p>
+        <!--<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Перейти &raquo;</a></p>-->
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Расписание</h2>
+        <p>Здесь вы можете просматривать и изменять расписание занятий</p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Перейти &raquo;</a></p>
     </div>
 </div>
