--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <p>
             дописать
         </p>
-        <p><a class="btn btn-default" href=@Url.Action("Index", "Lessons")>Перейти &raquo;</a></p>
+        <p><a class="btn btn-default" href=@Url.Action("ChooseGroup", "Lessons")>Перейти &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
