--- a/dancing-studio/Content/Site.css
+++ b/dancing-studio/Content/Site.css
@@ -1,12 +1,16 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:olive;
+    
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    font-family:Andalus;
+    color:white;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,4 +25,5 @@ input,
 select,
 textarea {
     max-width: 280px;
+    color:azure;
 }
