--- a/dancing-studio/Content/Site.css
+++ b/dancing-studio/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:#E7D19D;
+    font-family:Andalus;
 }
 
 /* Set padding to keep content from hitting the edges */
