--- a/dancing-studio/Views/Lessons/Create.cshtml
+++ b/dancing-studio/Views/Lessons/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model dancing_studio.DAL.Lesson
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление";
 }
 
-<h2>Create</h2>
+<h2>Добавление урока</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Lesson</h4>
+        @*<h4>Группа: @Model.Group.Name</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.GroupId)
@@ -43,12 +43,12 @@
     
         <hr />
     
-        @foreach (dancing_studio.DAL.Student s in ViewBag.Students)
+        @foreach (dancing_studio.DAL.Present s in Model.Presents)
         {
             <div class="form-group">
-                <p class = "control-label col-md-2">@s.Name</p>
+                <p class = "control-label col-md-2">@s.Student.Name</p>
                 <div class="col-md-10">
-                    @Html.EnumDropDownListFor(model => model.Presents.ToArray()[0].Condition, htmlAttributes: new { @class = "form-control" })
+                    @Html.EnumDropDownListFor(model => s.Condition, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.TeacherId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -63,7 +63,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку", "Index", new { id = ViewBag.id})
 </div>
 
 <script>
