--- a/dancing-studio/Content/bootstrap.css
+++ b/dancing-studio/Content/bootstrap.css
@@ -1425,8 +1425,8 @@ th {
 .table {
   width: 100%;
   margin-bottom: 20px;
-  border-left:1px solid #C24B4B;
-  border-right:1px solid #C24B4B;
+  /*border-left:1px solid #C24B4B;
+  border-right:1px solid #C24B4B;*/
   border-bottom:1px solid #C24B4B;
 }
 
@@ -1977,11 +1977,17 @@ textarea.input-lg {
   padding-top: 7px;
   margin-top: 0;
   margin-bottom: 0;
+
 }
 
+.form-horizontal{
+  background-color:rgba(255, 255, 237, 0.41);
+  border-radius:8px;
+}
 .form-horizontal .form-group {
   margin-right: -15px;
   margin-left: -15px;
+  
 }
 
 .form-horizontal .form-group:before,
@@ -4949,7 +4955,7 @@ a.list-group-item.active > .badge,
   color: inherit;
   background-color: #eeeeee;
   background-image: url("bg.jpg");
-}
+}אשך
 
 .jumbotron h1 {
   line-height: 1;
