--- a/dancing-studio/Views/Lessons/Create.cshtml
+++ b/dancing-studio/Views/Lessons/Create.cshtml
@@ -12,10 +12,9 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        @*<h4>Группа: @Model.Group.Name</h4>*@
+        <h4>Группа: @ViewBag.GrName</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.GroupId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.DateTime, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -28,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TeacherId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TeacherId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("TeacherId", null, htmlAttributes: new { @class = "form-control"  })
                 @Html.ValidationMessageFor(model => model.TeacherId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,36 +41,33 @@
         </div>
     
         <hr />
-    
-        @foreach (dancing_studio.DAL.Present s in Model.Presents)
-        {
-            <div class="form-group">
-                <p class = "control-label col-md-2">@s.Student.Name</p>
-                <div class="col-md-10">
-                    @Html.EnumDropDownListFor(model => s.Condition, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.TeacherId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        }
-    
+ 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
+    <div class="form-group" style="visibility:hidden">
+        @Html.LabelFor(model => model.GroupId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("GroupId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.GroupId, "", new { @class = "text-danger" })
+        </div>
+    </div>
 }
 
 <div>
-    @Html.ActionLink("Вернуться к списку", "Index", new { id = ViewBag.id})
+    @Html.ActionLink("Вернуться к журналу", "Index", new { id = ViewBag.Gr })
 </div>
 
 <script>
     window.onload = function()
     {
-        var a = document.getElementById('price');;
+        var a = document.getElementById('price');
         a.value = "25";
     }
+
 </script>
 
 @section Scripts {
