--- a/dancing-studio/Views/Lessons/Delete.cshtml
+++ b/dancing-studio/Views/Lessons/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model dancing_studio.DAL.Lesson
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление";
 }
 
-<h2>Delete</h2>
+<h2>Удаление урока</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены, что хотите удалить урок?</h3>
 <div>
-    <h4>Lesson</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Teacher.Name)
+            Провел(а)
         </dt>
 
         <dd>
@@ -49,8 +48,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            @Html.ActionLink("Вернуться к списку", "Index", new { id = Model.GroupId })
         </div>
     }
 </div>
