--- a/dancing-studio/Views/Lessons/Index.cshtml
+++ b/dancing-studio/Views/Lessons/Index.cshtml
@@ -1,19 +1,17 @@
 ﻿@model IEnumerable<dancing_studio.DAL.Lesson>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Журнал";
 }
 
-<h2>Index</h2>
+<h2>Журнал группы</h2>
+<h4>@ViewBag.GrName</h4>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { id = ViewBag.groupId})
+    @Html.ActionLink("Добавить урок", "Create", new { id = ViewBag.groupId})
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Group.Name)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Teacher.Name)
         </th>
@@ -29,9 +27,6 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Group.Name)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Teacher.Name)
         </td>
         <td>
@@ -42,7 +37,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Отметить", "EditPresents", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
