журнал+мирация бд+ ...

--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Главная";
 }
 
 <div class="jumbotron">
@@ -13,7 +13,7 @@
         <p>
            Здесь вы можете заполнить и просмотреть журнал посещения
         </p>
-        <p><a class="btn btn-default" href=@Url.Action("Index", "Lessons")>Перейти &raquo;</a></p>
+        <p><a class="btn btn-default" href=@Url.Action("ChooseGroup", "Lessons")>Перейти &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2> </h2>
@@ -23,6 +23,6 @@
     <div class="col-md-4">
         <h2>Расписание</h2>
         <p>Здесь вы можете просматривать и изменять расписание занятий</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Перейти &raquo;</a></p>
+        <p><a class="btn btn-default" href="#">Перейти &raquo;</a></p>
     </div>
 </div>
