--- a/dancing-studio/Views/Lessons/Delete.cshtml
+++ b/dancing-studio/Views/Lessons/Delete.cshtml
@@ -49,7 +49,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Удалить" class="btn btn-default" /> |
-            @Html.ActionLink("Вернуться к списку", "Index", new { id = Model.GroupId })
+            @Html.ActionLink("Вернуться к журналу", "Index", new { id = Model.GroupId })
         </div>
     }
 </div>
