--- a/dancing-studio/Views/Shared/_Layout.cshtml
+++ b/dancing-studio/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Преподаватели", "Index", "Teachers")</li>
                     <li>@Html.ActionLink("Ученики", "Index", "Students")</li>
                     <li>@Html.ActionLink("Группы", "Index", "Groups")</li>
+                    <li>@Html.ActionLink("Журнал", "ChooseGroup", "Lessons")</li>
                 </ul>
             </div>
         </div>
@@ -34,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year – Алина Ракова, Дмитрий Ребенко, Миронцева Александра</p>
+            <p>&copy; @DateTime.Now.Year – Алина Ракова, Дмитрий Ребенко, Александра Миронцева </p>
         </footer>
     </div>
 
