--- a/dancing-studio/Views/Lessons/Details.cshtml
+++ b/dancing-studio/Views/Lessons/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model dancing_studio.DAL.Lesson
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Подробно";
 }
 
-<h2>Details</h2>
+<h2>Информация об уроке</h2>
 
 <div>
-    <h4>Lesson</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,7 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Teacher.Name)
+           Провел(а)
         </dt>
 
         <dd>
@@ -45,6 +44,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Изменить", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Вернуться к журналу", "Index", new { id = Model.GroupId })
 </p>
