--- a/dancing-studio/Views/Lessons/EditPresents.cshtml
+++ b/dancing-studio/Views/Lessons/EditPresents.cshtml
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Present</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
        
@@ -25,7 +24,7 @@
                     @Html.ValidationMessageFor(model => model[i].Condition, "", new { @class = "text-danger" })
                 </div>
             </div>
-            @Html.HiddenFor(model => model[i].LessonnId)
+            @Html.HiddenFor(model => model[i].LessonId)
             @Html.HiddenFor(model => model[i].StudentId)
             @Html.HiddenFor(model => model[i].Id)
         }
