--- a/dancing-studio/Views/Lessons/Index.cshtml
+++ b/dancing-studio/Views/Lessons/Index.cshtml
@@ -5,42 +5,66 @@
 }
 
 <h2>Журнал группы</h2>
-<h4>@ViewBag.GrName</h4>
+<h4>@ViewBag.GrName </h4>
 
 <p>
-    @Html.ActionLink("Добавить урок", "Create", new { id = ViewBag.groupId})
+   
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Teacher.Name)
-        </th>
+        </th> 
+        
+        @foreach (var d in Model.OrderBy(x => x.DateTime))
+        {
+            <th align="center">
+                <p align="center"> @Html.DisplayFor(modelItem => d.DateTime)</p>
+            </th>
+        }
         <th>
-            @Html.DisplayNameFor(model => model.DateTime)
+            @Html.ActionLink("Добавить урок", "Create", new { id = ViewBag.groupId })
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Teacher.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Отметить", "EditPresents", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@if(Model.Count() != 0)
+{
+    foreach (dancing_studio.DAL.Student item in Model.First().Group.Students.ToList().OrderBy(x => x.Name)) 
+    {
+        <tr>
+            <th>
+                @Html.DisplayFor(modelItem => item.Name)
+            </th>
+            @foreach (var d in Model.OrderBy(x => x.DateTime))
+            {
+                <td align="center">
+                    @{
+                        dancing_studio.DAL.Present.Presence presence = Model.SingleOrDefault(x => x.DateTime == d.DateTime).Presents.SingleOrDefault(x => x.StudentId == item.Id).Condition;
+                        if (presence == dancing_studio.DAL.Present.Presence.Present) {<p>+</p>}
+                        else if (presence == dancing_studio.DAL.Present.Presence.AbsenceValid) { <p>ув.</p> }
+                        else { <p>не ув.</p> }
+                     }
+                    
+                   
+                </td>
+            }
+            <td>
+            </td>
+            
+        </tr>
+    }
 }
+    <tr>
+        <td></td>
+        @foreach (var item in Model.OrderBy(x => x.DateTime))
+        {
+            <td align="center">
+                @Html.ActionLink("Изменить", "Edit", new { id = item.Id })<br />
+                @Html.ActionLink("Отсутствующие", "EditPresents", new { id = item.Id })<br />
+                @Html.ActionLink("Подробно", "Details", new { id = item.Id })<br />
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
+            </td>
+        }
+        <td></td>
+    </tr>
 
 </table>
