--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -20,9 +20,9 @@
         <p> </p>
         <!--<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Перейти &raquo;</a></p>-->
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <h2>Расписание</h2>
         <p>Здесь вы можете просматривать и изменять расписание занятий</p>
         <p><a class="btn btn-default" href="#">Перейти &raquo;</a></p>
-    </div>
+    </div>*@
 </div>
