--- a/dancing-studio/Views/Students/Create.cshtml
+++ b/dancing-studio/Views/Students/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление";
 }
 
 <h2>Добавление ученика</h2>
