--- a/dancing-studio/Views/Students/Delete.cshtml
+++ b/dancing-studio/Views/Students/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление";
 }
 
 <h2>Удаление ученика</h2>
