--- a/dancing-studio/Views/Students/Details.cshtml
+++ b/dancing-studio/Views/Students/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Информация";
 }
 
 <h2>Информация об ученике</h2>
