--- a/dancing-studio/Views/Students/Edit.cshtml
+++ b/dancing-studio/Views/Students/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Изменить";
+    ViewBag.Title = "Изменение";
 }
 
 <h2>Изменить информацию</h2>
