--- a/dancing-studio/Views/Students/Index.cshtml
+++ b/dancing-studio/Views/Students/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<dancing_studio.DAL.Student>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Ученики";
 }
 
 <h2>Ученики</h2>
