--- a/dancing-studio/Views/Teachers/Create.cshtml
+++ b/dancing-studio/Views/Teachers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dancing_studio.DAL.Teacher
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление";
 }
 
 <h2>Добавление преподавателя</h2>
