--- a/dancing-studio/Views/Students/Index.cshtml
+++ b/dancing-studio/Views/Students/Index.cshtml
@@ -44,6 +44,7 @@
             }
         </td>
         <td>
+            @Html.ActionLink("Счёт", "Create", new { Controller = "Payments", action = "Create", id = item.Id }) |
             @Html.ActionLink("Изменить", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Подробней", "Details", new { id=item.Id }) |
             @Html.ActionLink("Удалить", "Delete", new { id=item.Id })
