--- a/dancing-studio/Views/Students/Details.cshtml
+++ b/dancing-studio/Views/Students/Details.cshtml
@@ -47,6 +47,13 @@
             }
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Info)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Info)
+        </dd>
+
     </dl>
 </div>
 <p>
