--- a/dancing-studio/Views/Students/Create.cshtml
+++ b/dancing-studio/Views/Students/Create.cshtml
@@ -46,6 +46,14 @@
                 }
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Info, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Info, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Info, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
 
         @Html.HiddenFor(model => model.Groups)
 
