--- a/dancing-studio/Content/bootstrap.css
+++ b/dancing-studio/Content/bootstrap.css
@@ -21,6 +21,39 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+a.editer
+{
+ background: url("edit.png") no-repeat top left;
+ display: block;
+ width: 30px;
+ height: 30px;
+ text-indent: -9999px; /* hides the link text */
+}
+a.adder
+{
+ background: url("add.png") no-repeat top left;
+ display: block;
+ width: 50px;
+ height: 50px;
+ text-indent: -9999px; /* hides the link text */
+}
+a.details
+{
+ background: url("details.png") no-repeat top left;
+ display: block;
+ width: 30px;
+ height: 30px;
+ text-indent: -9999px; /* hides the link text */
+}
+a.delete
+{
+ background: url("delete.png") no-repeat top left;
+ display: block;
+ width: 30px;
+ height: 30px;
+ text-indent: -9999px; /* hides the link text */
+}
+
 article,
 aside,
 details,
@@ -147,7 +180,7 @@ sub {
 }
 
 img {
-  border: 0;
+  border-radius: 10px;
 }
 
 svg:not(:root) {
@@ -1432,6 +1465,7 @@ th {
   /*border-left:1px solid #C24B4B;
   border-right:1px solid #C24B4B;*/
   border-bottom:1px solid #C24B4B;
+  border-top: 1px solid #C24B4B;
 }
 
 .table thead > tr > th,
@@ -1467,6 +1501,7 @@ th {
 
 .table .table {
   background-color: #ffffff;
+  border-top: 1px solid #C24B4B;
 }
 
 .table-condensed thead > tr > th,
@@ -4951,15 +4986,15 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
-  padding: 50px;
+  padding: 10px;
   margin-bottom: 30px;
   font-size: 21px;
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
-  background-image: url("bg.jpg");
-}אשך
+  /*background-color: #eeeeee;*/
+  /*background-image: url("bg.jpg");*/
+}
 
 .jumbotron h1 {
   line-height: 1;
@@ -4977,7 +5012,7 @@ a.list-group-item.active > .badge,
 
 @media screen and (min-width: 768px) {
   .jumbotron {
-    padding-top: 240px;
+    padding-top: 10px;
     padding-bottom: 60px;
   }
   .container .jumbotron {
@@ -6197,9 +6232,9 @@ body.modal-open,
   bottom: 20px;
   left: 15%;
   z-index: 10;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-bottom: 20px;
-  color: #ffffff;
+  color: #4E2618;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
