--- a/dancing-studio/Views/Groups/Index.cshtml
+++ b/dancing-studio/Views/Groups/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Группы</h2>
 
 <p>
-    @Html.ActionLink("Добавить новую", "Create")
+    @Html.ActionLink("Добавить новую", "Create", null, new { @class = "adder" })
 </p>
 <table class="table">
     <tr>
@@ -18,23 +18,28 @@
         <th>
             ФИО преподавателя
         </th>
-        <th></th>
+        <th>
+            <th width="30"></th>
+            <th width="30"></th>
+            <th width="30"></th>
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Teacher.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Изменить", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Подробней", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Удалить", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Teacher.Name)
+            </td>
+            <td>
+            <th>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
+            <th>@Html.ActionLink("Подробней", "Details", new { id = item.Id }, new { @class = "details" })</th>
+            <th>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
+            </td>
+        </tr>
+    }
 
 </table>
