--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -3,43 +3,72 @@
 }
 
 <div class="jumbotron">
-    <h1>Система управления центром обучения и досуга</h1>
-    <p class="lead">Добро пожаловать на главную страницу!</p>
-</div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Журнал</h2>
-        <p>
-           Здесь вы можете заполнить и просмотреть журнал посещения
-        </p>
-        <p><a class="btn btn-default" href=@Url.Action("ChooseGroup", "Lessons")>Перейти &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2> </h2>
-        <p> </p>
-        <!--<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Перейти &raquo;</a></p>-->
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="/bg.jpg" />
+                <div class="carousel-caption">
+                    <h1>Система управления центром обучения и досуга</h1>
+                    <p class="lead">Добро пожаловать на главную страницу!</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="/img2.jpg" />
+            </div>
+
+            <div class="item">
+                <img src="/img3.jpg" />
+            </div>
+
+            <div class="item">
+                <img src="/img4.jpg" />
+            </div>
+        </div>
     </div>
 
-    <div class="col-md-4">
-        @if ((ViewBag.TodayBirthdayStudents).Count != 0)
-        { 
-            <h3>Сегодня День рождения y:</h3>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-horizontal" style="padding-left:10px; padding-bottom:5px">
+                <h2 style="padding:7px">Журнал</h2>
+                <p>
+                    Здесь вы можете заполнить и просмотреть журнал посещения
+                </p>
+                <p><a class="btn btn-default" href=@Url.Action("ChooseGroup", "Lessons")>Перейти &raquo;</a></p>
+            </div>
+         </div>
+      <div class="col-md-4">
+            <h2> </h2>
+            <p> </p>
+            <!--<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Перейти &raquo;</a></p>-->
+      </div>
+        <div class="col-md-4">
+            @if ((ViewBag.TodayBirthdayStudents).Count != 0)
+        {
+                <h3>Сегодня День рождения y:</h3>
             foreach(dancing_studio.DAL.Student s in ViewBag.TodayBirthdayStudents)
-            { 
+            {
                 <p> @Html.ActionLink(s.Name, "Details", new { Controller = "Students", action ="Details", id = s.Id })</p>
             }
-            <h3>Скоро День рождения y:</h3>
+                <h3>Скоро День рождения y:</h3>
             foreach (dancing_studio.DAL.Student s in ViewBag.NearestBirthDays)
             {
                 <p>@s.Birthday.Value.Day.@s.Birthday.Value.Month - @Html.ActionLink(s.Name, "Details", new { Controller = "Students", action = "Details", id = s.Id })</p>
             }
         }
+        </div>
+        @*<div class="col-md-4">
+                <h2>Расписание</h2>
+                <p>Здесь вы можете просматривать и изменять расписание занятий</p>
+                <p><a class="btn btn-default" href="#">Перейти &raquo;</a></p>
+            </div>*@
     </div>
-
-    @*<div class="col-md-4">
-        <h2>Расписание</h2>
-        <p>Здесь вы можете просматривать и изменять расписание занятий</p>
-        <p><a class="btn btn-default" href="#">Перейти &raquo;</a></p>
-    </div>*@
-</div>
