--- a/dancing-studio/Views/Lessons/Index.cshtml
+++ b/dancing-studio/Views/Lessons/Index.cshtml
@@ -10,11 +10,11 @@
 <p>
    
 </p>
-<table class="table">
+<table class="table table-bordered">
     <tr>
         <th>
-        </th> 
-        
+        </th>
+
         @foreach (var d in Model.OrderBy(x => x.DateTime))
         {
             <th align="center">
@@ -25,49 +25,49 @@
             @Html.ActionLink("Добавить урок", "Create", new { id = ViewBag.groupId })
         </th>
     </tr>
-
-@if(Model.Count() != 0)
-{
-    foreach (dancing_studio.DAL.Student item in Model.First().Group.Students.ToList().OrderBy(x => x.Name)) 
+    @if (Model.Count() != 0)
     {
-        <tr>
-            <th>
-                @Html.DisplayFor(modelItem => item.Name)
-            </th>
-            @foreach (var d in Model.OrderBy(x => x.DateTime))
-            {
-                <td align="center">
-                    @{
-                        if (Model.SingleOrDefault(x => x.DateTime == d.DateTime).Presents.SingleOrDefault(x => x.StudentId == item.Id) != null)
-                        { 
-                            dancing_studio.DAL.Present.Presence presence = Model.SingleOrDefault(x => x.DateTime == d.DateTime).Presents.SingleOrDefault(x => x.StudentId == item.Id).Condition;
-                            if (presence == dancing_studio.DAL.Present.Presence.Present) {<p>+</p>}
-                            else if (presence == dancing_studio.DAL.Present.Presence.AbsenceValid) { <p>ув.</p> }
-                            else { <p>не ув.</p> }
+        foreach (dancing_studio.DAL.Student item in Model.First().Group.Students.ToList().OrderBy(x => x.Name))
+        {
+            <tr>
+                <th>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </th>
+                @foreach (var d in Model.OrderBy(x => x.DateTime))
+                {
+                    <td align="center">
+                        @{
+                    if (Model.SingleOrDefault(x => x.DateTime == d.DateTime).Presents.SingleOrDefault(x => x.StudentId == item.Id) != null)
+                    {
+                        dancing_studio.DAL.Present.Presence presence = Model.SingleOrDefault(x => x.DateTime == d.DateTime).Presents.SingleOrDefault(x => x.StudentId == item.Id).Condition;
+                        if (presence == dancing_studio.DAL.Present.Presence.Present)
+                        {<p>+</p>}
+                        else if (presence == dancing_studio.DAL.Present.Presence.AbsenceValid)
+                        { <p>ув.</p> }
+                        else
+                        { <p>не ув.</p> }
+                    }
                         }
-                     }
-                    
-                   
-                </td>
-            }
-            <td>
-            </td>
-            
-        </tr>
+
+
+                    </td>
+                }
+                <td></td>
+
+            </tr>
+        }
     }
-}
     <tr>
         <td></td>
         @foreach (var item in Model.OrderBy(x => x.DateTime))
         {
             <td align="center">
-                <p>@Html.ActionLink("Отсутствующие", "EditPresents", new { id = item.Id })<br /> 
+                <p>@Html.ActionLink("Отсутствующие", "EditPresents", new { id = item.Id })<br />
                 <p>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })
                 <p>@Html.ActionLink("Подробно", "Details", new { id = item.Id }, new { @class = "details" })
                 <p>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })
-</td>
+            </td>
         }
         <td></td>
     </tr>
-
 </table>
