--- a/dancing-studio/Views/Payments/Edit.cshtml
+++ b/dancing-studio/Views/Payments/Edit.cshtml
@@ -33,12 +33,10 @@
         </div>
 
         <div class="form-group">
-            //нет валидации 
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="text" id="Date" class="form-control text-box single-line" name="Date" value="@Model.Date.Value.ToShortDateString()" />
-                @*@Html.EditorFor(model => model.Date.Value, new { htmlAttributes = new { @class = "form-control", id = "dat" } })*@
-                @Html.ValidationMessage("Date", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @type = "text"  } })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
 
