--- a/dancing-studio/Views/Payments/Index.cshtml
+++ b/dancing-studio/Views/Payments/Index.cshtml
@@ -29,9 +29,8 @@
             @Html.DisplayFor(modelItem => item.Date.Value.Date.Day).@Html.DisplayFor(modelItem => item.Date.Value.Date.Month).@Html.DisplayFor(modelItem => item.Date.Value.Date.Year)
         </td>
         <td>
-            @Html.ActionLink("Изменить", "Edit", new { id=item.Id }) |
-            @*@Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
-            @Html.ActionLink("Удалить", "Delete", new { id=item.Id })
+            <th>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" }) </th>
+            <th>@Html.ActionLink("Удалить", "Delete", new { id=item.Id }, new { @class = "delete" })</th>
         </td>
     </tr>
 }
