--- a/dancing-studio/Views/Students/Index.cshtml
+++ b/dancing-studio/Views/Students/Index.cshtml
@@ -50,7 +50,7 @@
                 }
             </td>
             <td>
-                <th>@Html.ActionLink("Счёт", "Create", new { Controller = "Payments", action = "Create", id = item.Id }) </th>
+                <th>@Html.ActionLink("Баланс", "Create", new { Controller = "Payments", action = "Create", id = item.Id }) </th>
                 <th>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
                 <th>@Html.ActionLink("Подробней", "Details", new { id = item.Id }, new { @class = "details" })</th>
                 <th>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
