--- a/dancing-studio/Views/Students/Edit.cshtml
+++ b/dancing-studio/Views/Students/Edit.cshtml
@@ -27,7 +27,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="tel" class="form-control" name="PhoneNumber" id="PhoneNumber" placeholder="000-000-00-00" />
+                @*@Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
+                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control", id="birth-date"} })
                 @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -75,3 +76,15 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script>
+    window.onload = function () {
+        var m = '@Model.Birthday.Value.Date.Month'
+        if (m.length == 1) m = '0' + m
+
+        var d = '@Model.Birthday.Value.Date.Day'
+        if (d.length == 1) d = '0' + d
+
+        $('#birth-date').val('@Model.Birthday.Value.Date.Year' + '-' + m + '-' + d);
+    };
+</script>
