--- a/dancing-studio/Views/Teachers/Create.cshtml
+++ b/dancing-studio/Views/Teachers/Create.cshtml
@@ -25,7 +25,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="tel" class="form-control" name="PhoneNumber" id="PhoneNumber" placeholder="000-000-00-00" />
+                @*@Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Groups, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @foreach (dancing_studio.DAL.Group c in ViewBag.Groups)
@@ -46,7 +47,7 @@
                     <input type="checkbox" name="selectedGroups" value="@c.Id" /> @(c.Name + " - " + c.Teacher.Name)<br />
                 }
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
