--- a/dancing-studio/Views/Teachers/Edit.cshtml
+++ b/dancing-studio/Views/Teachers/Edit.cshtml
@@ -27,15 +27,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                <input type="tel" class="form-control" name="PhoneNumber" id="PhoneNumber" placeholder="+380961113322" />
+                @*@Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", @type="text", placeholder = "00000" } })*@
+                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
+                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control", id = "date" } })
                 @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,3 +57,14 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script>
+    window.onload = function () {
+        var m = '@Model.Birthday.Value.Date.Month'
+        if (m.length == 1) m = '0' + m
+
+        var d = '@Model.Birthday.Value.Date.Day'
+        if (d.length == 1) d = '0' + d
+        $('#date').val('@Model.Birthday.Value.Date.Year' + '-' + m + '-' + d);
+    };
+</script>
